--- a/.gitmodules
+++ b/.gitmodules
@@ -10,21 +10,15 @@
 [submodule "bundle/molokai"]
 	path = bundle/molokai
 	url = https://github.com/tomasr/molokai.git
-[submodule "vim-perl"]
-	path = vim-perl
-	url = git://github.com/vim-perl/vim-perl.git
 [submodule "bundle/vim-perl"]
 	path = bundle/vim-perl
-	url = git://github.com/vim-perl/vim-perl.git
+	url = https://github.com/vim-perl/vim-perl.git
 [submodule "bundle/vim-taglist"]
 	path = bundle/vim-taglist
 	url = https://github.com/chrismetcalf/vim-taglist
-[submodule "vim-git"]
-	path = vim-git
-	url = https://github.com/tpope/vim-git.git
 [submodule "bundle/vim-git"]
 	path = bundle/vim-git
 	url = https://github.com/tpope/vim-git.git
 [submodule "bundle/fugitive"]
 	path = bundle/fugitive
-	url = https://github.com/tpope/vim-git.git
+	url = https://github.com/tpope/vim-fugitive.git
